[package]
edition.workspace = true
license-file.workspace = true
name = "torii-relay"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures.workspace = true
rand.workspace = true
serde.workspace = true
# preserve order
anyhow.workspace = true
async-trait.workspace = true
cainome.workspace = true
chrono.workspace = true
crypto-bigint.workspace = true
dojo-types.workspace = true
dojo-world = { path = "../../dojo-world", features = [ "contracts" ] }
indexmap.workspace = true
regex.workspace = true
serde_json.workspace = true
starknet-crypto.workspace = true
starknet.workspace = true
thiserror.workspace = true
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
tracing.workspace = true

[dev-dependencies]
dojo-test-utils.workspace = true
katana-runner.workspace = true
tempfile.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p", features = [ "dns", "ed25519", "gossipsub", "identify", "macros", "noise", "ping", "quic", "relay", "tcp", "tokio", "websocket", "yamux" ], rev = "3837e33cd4c40ae703138e6aed6f6c9d52928a80" }
libp2p-webrtc = { git = "https://github.com/libp2p/rust-libp2p", features = [ "pem", "tokio" ], rev = "3837e33cd4c40ae703138e6aed6f6c9d52928a80" }
rcgen = "0.13.1"
sqlx.workspace = true
tokio.workspace = true
torii-core.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p", features = [ "ed25519", "gossipsub", "identify", "macros", "noise", "ping", "tcp", "wasm-bindgen", "yamux" ], rev = "3837e33cd4c40ae703138e6aed6f6c9d52928a80" }
libp2p-webrtc-websys = { git = "https://github.com/libp2p/rust-libp2p", rev = "3837e33cd4c40ae703138e6aed6f6c9d52928a80" }
libp2p-websocket-websys = { git = "https://github.com/libp2p/rust-libp2p", rev = "3837e33cd4c40ae703138e6aed6f6c9d52928a80" }
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.40"
wasm-bindgen-test = "0.3.40"
wasm-timer = "0.2.5"
